<resources>
    <string name="app_name">RunSmart</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">DONE</string>
    <string name="facebook_app_id">701901049959272</string>
    <string name="fb_login_protocol_scheme">fb701901049959272</string>
    <string name="add">Add</string>
    <string name="view_profile">View Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="sex">Sex</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="male_female">M/F</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="back_error">Please save before exiting.</string>
    <string name="back_run">Please stop to exit.</string>
    <string name="no_age">The item Age cannot be empty.</string>
    <string name="no_name">The item Name cannot be empty.</string>
    <string name="no_weight">The item Weight cannot be empty.</string>
    <string name="no_height">The item Height cannot be empty.</string>
    <string name="missing_fields">Please fill missing fields before saving.</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="large_age">Please enter age between 0-99.</string>
    <string name="large_weight">Please enter weight between 0-200.</string>
    <string name="large_height">Please enter height between 1-215</string>
    <string name="BMI">BMI</string>
    <string name="BMR">BMR</string>
    <string name="no_goal">This value cannot be empty.</string>
    <string name="goal_title">Current Goals:</string>
    <string name="add_goal">Add a Goal:</string>
    <string name="goal_zero">Goal cannot be set to 0.</string>
    <string name="get_started">To get started, sign in with Facebook or create an offline profile.</string>
    <string name="create_profile">Create an offline profile</string>
    <string name="google_maps">Allow Google Maps</string>

    <string name="goal_type_prompt">Select Goal Type</string>
    <string-array name="goal_type_array">
        <item>Walk</item>
        <item>Run</item>
    </string-array>

    <string name="goal_run_type_prompt">Select Type</string>
    <string-array name="goal_run_type_array">
        <item>minutes</item>
        <item>kilometres</item>
    </string-array>

    <string-array name="goal_duration_array">
        <item>today</item>
        <item>this week</item>
        <item>this month</item>
    </string-array>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="max_duration">Max duration</string>
    <string name="max_distance">Max distance</string>
    <string name="max_speed">Max speed</string>
    <string name="max_steps">Max steps</string>
    <string name="all_time_steps">All time steps</string>
    <string name="all_time_distance">All time distance</string>
    <string name="workout_details">WORKOUT DETAILS</string>
    <string name="duration">Total duration</string>
    <string name="calories">Total calories</string>
    <string name="before_hr">Heart rate before workout</string>
    <string name="after_hr">Heart rate after workout</string>
    <string name="avg_speed">Average speed</string>

    <string-array name="month_options">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="year_options">
        <item>2016</item>
    </string-array>

    <string-array name="sex_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="run_options">
        <item>Distance</item>
        <item>Duration</item>
        <item>Average Speed</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
</resources>