<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.project_wombat.runsmart.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/my_toolbar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:id="@+id/gender"
        android:layout_below="@+id/editAge"
        android:layout_alignLeft="@+id/editAge"
        android:layout_alignStart="@+id/editAge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/age"
        android:layout_below="@+id/editName"
        android:layout_alignLeft="@+id/editName"
        android:layout_alignStart="@+id/editName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:id="@+id/weight"
        android:layout_below="@+id/editAge"
        android:layout_alignLeft="@+id/editAge"
        android:layout_alignStart="@+id/editAge"
        android:layout_marginTop="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:id="@+id/height"
        android:layout_below="@+id/editWeight"
        android:layout_alignLeft="@+id/editWeight"
        android:layout_alignStart="@+id/editWeight" />

    <EditText
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editAge"
        android:layout_below="@+id/age"
        android:layout_alignLeft="@+id/editName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <EditText
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editWeight"
        android:layout_below="@+id/weight"
        android:layout_alignLeft="@+id/weight"
        android:layout_alignStart="@+id/weight" />

    <Switch
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:text="@string/male_female"
        android:id="@+id/editGender"
        android:checked="false"
        android:layout_below="@+id/gender"
        android:layout_alignLeft="@+id/gender"
        android:layout_alignStart="@+id/gender"
        android:layout_alignRight="@+id/editAge"
        android:layout_alignEnd="@+id/editAge" />

    <EditText
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editHeight"
        android:layout_below="@+id/height"
        android:layout_alignLeft="@+id/height"
        android:layout_alignStart="@+id/height" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:visibility="invisible"
        android:onClick="savePreferences"
        android:layout_below="@+id/editHeight"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBMI"
        android:layout_alignLeft="@+id/textBMI"
        android:layout_alignStart="@+id/textBMI"
        android:layout_marginTop="30dp"
        android:id="@+id/valueBMI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/valueBMI"
        android:layout_alignLeft="@+id/textBMR"
        android:layout_alignStart="@+id/textBMR"
        android:id="@+id/valueBMR" />

    <TextView
        android:text="BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBMI"
        android:layout_below="@+id/editHeight"
        android:layout_alignLeft="@+id/editHeight"
        android:layout_alignStart="@+id/editHeight" />

    <TextView
        android:text="BMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBMR"
        android:layout_below="@+id/editHeight"
        android:layout_alignRight="@+id/editHeight"
        android:layout_alignEnd="@+id/editHeight" />

</RelativeLayout>
